...
      
      if (pairs.length != A.rows) {
        steps.add(SolutionStep("Error: Found ${pairs.length} eigenpairs, but matrix is ${A.rows}x${A.rows}.\nMatrix might not be diagonalizable."));
        return steps;
      }
      
      Matrix D = Matrix(A.rows, A.cols);
      Matrix P = Matrix(A.rows, A.cols);
      
      for(int i=0; i<pairs.length; i++) {
        D.set(i, i, _toFraction(pairs[i].eigenvalue));
        for(int j=0; j<A.rows; j++) {
          P.set(j, i, _toFraction(pairs[i].eigenvector[j]));
        }
...
