...
      
      if (op == 'A+B') {
        steps = A.additionSteps(B!);
      } else if (op == 'A-B') steps = A.subtractionSteps(B!);
      else if (op == 'AxB') steps = A.multiplicationSteps(B!);
      else if (op == 'Trans(A)') steps = A.transposeSteps();
      else if (op == 'Inv(A)') steps = A.inverseSteps();
      else if (op == 'Rank(A)') steps = A.rankSteps();
      else if (op == 'Det(A)') steps = A.determinantGaussianSteps(); // Default to Gaussian for Ops tab
      else if (op == 'REF(A)') steps = A.triangleSteps(); // REF
      else if (op == 'RREF(A)') steps = A.rrefSteps();
      else if (op == 'Triangle(A)') steps = A.triangleSteps();
      else if (op == 'A*k') {
        if (_scalarController.text.isEmpty) throw Exception("Enter a scalar value k");
        Fraction k = Fraction.fromString(_scalarController.text);
...
